@startuml
title Cleanux — TO-BE Entity Class Diagram (DDD)
skinparam componentStyle rectangle
skinparam classAttributeIconSize 0

package "domain/entities/" {
  class CleaningProfile {
    +id: EntityId
    +name: String
    +description: String
    +paths: Vec<PathBuf>
    +exclude_patterns: Vec<String>
    +settings: CleaningSettings
    +created_at: DateTime<Utc>
  }

  class CleaningSettings {
    +clean_cache: bool
    +clean_trash: bool
    +clean_logs: bool
    +min_large_file_size: u64
  }

  class AutomationRecipe {
    +id: EntityId
    +name: String
    +steps: Vec<RecipeStep>
    +enabled: bool
    +trigger: Trigger
    +created_at: DateTime<Utc>
    +updated_at: DateTime<Utc>
  }

  class RecipeStep {
    +action: ActionType
    +params: Value
  }

  enum ActionType {
    CleanCategory
    RunProfile
    ExecuteCommand
    Wait
  }

  enum Trigger {
    Manual
    Scheduled
    Event
  }

  class ExecutionHistory {
    +id: EntityId
    +name: String
    +status: ExecutionStatus
    +started_at: DateTime<Utc>
    +completed_at: Option<DateTime<Utc>>
    +steps_executed: u32
    +total_steps: u32
  }

  class HealthSnapshot {
    +id: EntityId
    +timestamp: DateTime<Utc>
    +health_score: f64
    +metrics: HealthMetrics
  }

  class HealthMetrics {
    +cache_size: u64
    +trash_size: u64
    +log_size: u64
    +large_files_count: i64
  }
}

package "domain/value_objects/" {
  class JunkCategory {
    +category: String
    +size: u64
    +item_count: i64
    +paths: Vec<PathBuf>
  }

  class ScanResult {
    +total_size: u64
    +categories: Vec<JunkCategory>
    +scan_duration_ms: u64
  }

  class CleanupResult {
    +space_reclaimed: u64
    +items_removed: i64
    +errors: Vec<String>
  }
}

AutomationRecipe --> Trigger
AutomationRecipe --> RecipeStep
RecipeStep --> ActionType
ExecutionHistory --> "1" AutomationRecipe
HealthSnapshot --> HealthMetrics

note bottom of CleaningProfile
  Domain entity with rich behavior
  CleaningSettings value object for settings
end note
@enduml
